# brazil-election-montecarlo

./: .gitignore  ARQUIVOS_CRIADOS.md  ATUALIZANDO_PESQUISAS.md  BUGFIX_v2.1.1.md  CHANGELOG.md  CHANGELOG_v2.2.md  CHANGELOG_v2.3.md  CHANGELOG_v2.4.md  CHANGELOG_v2.md  CHANGELOG_v2_8.md  CHANGELOG_v2_9.md  CONTRIBUTING.md  ISSUES_SUGERIDAS.md  POLL_AGGREGATION_GUIDE.md  README.md  README_old.md  README_v2.md  RELEASE_v2.2.md  RESUMO_v2.2.txt  ROADMAP.md  V3_PLANNING.md  VERSION_2.2_SUMMARY.txt  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: pesquisas.csv  pesquisas_2turno.csv  pesquisas_exemplo_multiplas.csv  pesquisas_multiplas.csv  pesquisas_multiplas_v2.4.csv  pesquisas_v2.2.csv
data/historico/: 2018_1t_T-14.csv  2018_1t_T-30.csv  2018_1t_T-7.csv  2022_1t_T-14.csv  2022_1t_T-30.csv  2022_1t_T-60.csv  2022_1t_T-7.csv  2022_1t_T-90.csv
src/: __init__.py  __main__.py  agregar_pesquisas.py  backtesting.py  cli.py  comparar_v1_v2.py  dashboard.py  simulation.py  simulation_2turno.py  simulation_combined.py  simulation_v2.2.py  simulation_v2.py  simulation_v2_fixcolors.py
src/core/: aggregation.py  bayesian.py  config.py  polymarket.py  simulation.py
src/io/: __init__.py  history.py  loader.py  report.py
src/viz/: charts.py  dashboard.py
tests/: conftest.py  test_aggregation.py  test_agregar_pesquisas.py  test_loader.py  test_polymarket.py  test_rejeicao.py  test_simulation.py
tests/fixtures/: pesquisas_2turno_minimal.csv  pesquisas_minimal.csv  pesquisas_missing_column.csv  pesquisas_no_rejeicao.csv  pesquisas_outlier.csv  pesquisas_single_poll.csv  pesquisas_zero_vote.csv  snapshot_historico_minimal.csv
