[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------

[project]
name = "brazil-election-montecarlo"
version = "3.0.0"
description = "Monte Carlo simulation for Brazil's 2026 Presidential Election with Polymarket edge calculation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "gabrielrv13" }]
keywords = ["election", "monte-carlo", "simulation", "brazil", "polymarket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

# ---------------------------------------------------------------------------
# Runtime dependencies
# ---------------------------------------------------------------------------
# Core simulation stack — always required.
# PyMC/Arviz are listed here as required because the existing codebase calls
# construir_modelo() unconditionally. The v3 refactor will move them to
# [project.optional-dependencies] once --bayesian flag gates the MCMC path.

dependencies = [
    # Numerical / data
    "numpy>=1.26,<3",
    "pandas>=2.1,<3",
    "scipy>=1.11",          # Dirichlet CDF, statistical utilities

    # Bayesian inference (heavy; gated behind --bayesian in v3)
    "pymc>=5.10,<6",
    "arviz>=0.18,<1",

    # Visualization
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",

    # Dashboard
    "streamlit>=1.32,<2",
]

# ---------------------------------------------------------------------------
# Optional dependency groups
# ---------------------------------------------------------------------------

[project.optional-dependencies]

# Install with: pip install -e ".[dev]"
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",    # mocker fixture for patching I/O in unit tests
    "ruff>=0.4",            # linter + formatter (replaces flake8 + isort + black)
]

# Install with: pip install -e ".[bayesian]"
# Reserved for v3: separates heavy MCMC stack from the fast simulation path.
bayesian = [
    "pymc>=5.10,<6",
    "arviz>=0.18,<1",
]

# ---------------------------------------------------------------------------
# CLI entry point (v3 target; stubs can live here from Sprint 1)
# ---------------------------------------------------------------------------

[project.scripts]
brazil-election = "src.cli:main"

# ---------------------------------------------------------------------------
# Hatchling build configuration
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# Pytest configuration
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
# Where to find tests
testpaths = ["tests"]

# Default flags applied to every pytest run:
#   --cov=src              measure coverage over the entire src/ package
#   --cov-report=term-missing  print uncovered lines in the terminal
#   --cov-fail-under=80    fail the build if coverage drops below 80 %
#   -ra                    show a short summary of all non-passing tests
#   --strict-markers       raise an error on undeclared markers (keeps the
#                          marker list below as the canonical registry)
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "-ra",
    "--strict-markers",
]

# Marker registry — every marker used in @pytest.mark.<name> must appear here.
# Tests without a marker are implicitly "unit" in spirit but are not required
# to carry one; the markers exist to allow selective execution.
#
#   pytest -m unit          → fast tests only (< 1 s each), no I/O
#   pytest -m integration   → tests that touch disk (src/io/ layer)
#   pytest -m slow          → backtesting full runs, MCMC chains (CI only)
#   pytest -m regression    → shy-Bolsonaro bias stability checks
markers = [
    "unit: pure logic tests; no disk I/O, no network (deselect with '-m not unit')",
    "integration: tests that read or write real files in a temp directory",
    "slow: long-running tests (backtesting loops, MCMC sampling); skipped locally by default",
    "regression: numerical stability checks; output must match a stored baseline",
]

# Suppress noisy third-party warnings that are not actionable during testing.
# Warnings from our own code are always visible (no filter on src.*).
filterwarnings = [
    # PyMC / Pytensor compilation warnings
    "ignore::UserWarning:pymc",
    "ignore::FutureWarning:pymc",
    "ignore::DeprecationWarning:pytensor",
    # Arviz ArviZ sampling diagnostics are not relevant in unit tests
    "ignore::UserWarning:arviz",
    # Pandas 2.x FutureWarning on chained assignment (third-party only)
    "ignore::FutureWarning:pandas",
    # NumPy 2.x type promotion warnings emitted by scipy/pymc internals
    "ignore::DeprecationWarning:numpy",
]

# Minimum Python version to run tests against (guards against accidental
# use of syntax not available in the required runtime)
# Enforced by requires-python above; repeated here for clarity.

# ---------------------------------------------------------------------------
# Ruff — linter and formatter
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "B",   # flake8-bugbear (common bugs and design issues)
    "UP",  # pyupgrade (modernize Python syntax)
    "ANN", # flake8-annotations (missing type hints on public functions)
    "D",   # pydocstyle (docstring conventions)
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = [
    "ANN101", # Missing type annotation for `self`
    "ANN102", # Missing type annotation for `cls`
    "D203",   # 1 blank line before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary on second line (conflicts with D212)
    "D401",   # First line of docstring should be in imperative mood (too strict)
    "B008",   # Do not perform function calls in default arguments (triggers on dataclasses)
]

[tool.ruff.lint.per-file-ignores]
# Test files: relax annotation and docstring requirements
"tests/**" = ["ANN", "D"]
# Legacy v2 scripts: do not enforce new rules on files pending deprecation
"simulation_v2.py"       = ["ANN", "D", "N", "SIM", "B", "UP", "E501"]
"simulation_2turno.py"   = ["ANN", "D", "N", "SIM", "B", "UP", "E501"]
"simulation_combined.py" = ["ANN", "D", "N", "SIM", "B", "UP", "E501"]
"backtesting.py"         = ["ANN", "D", "N", "SIM", "B", "UP", "E501"]
"dashboard.py"           = ["ANN", "D", "N", "SIM", "B", "UP", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "google"

# ---------------------------------------------------------------------------
# Coverage configuration
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["src"]
branch = true    # measure branch coverage, not just line coverage
omit = [
    # Legacy scripts pending deprecation in v3.0
    "simulation_v2.py",
    "simulation_2turno.py",
    "simulation_combined.py",
    "backtesting.py",
    "dashboard.py",
    # Dashboard is Streamlit — not measurable via pytest
    "src/viz/dashboard.py",
    # CLI entry point tested via integration tests, not unit coverage
    "src/cli.py",
    "src/__main__.py",
    # Sprint 1 — tests added in Sprint 2
    "src/core/config.py",
    "src/io/loader.py",
    # Compatibility stub — removed in Sprint 4
    "src/simulation.py",
]

[tool.coverage.report]
# Lines matching these patterns are excluded from the "missed" count
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.\\s*$",   # bare ellipsis (stub bodies)
]
show_missing = true
skip_covered = false